@@ -7,6 +7,8 @@
 
 namespace FOF30\Input;
 
+use Joomla\CMS\Factory;
+
 defined('_JEXEC') or die;
 
 class Input extends \JInput
@@ -15,7 +17,7 @@ class Input extends \JInput
 	 * Public constructor. Overridden to allow specifying the global input array
 	 * to use as a string and instantiate from an object holding variables.
 	 *
-	 * @param   array|string|object|null  $source   Source data; set null to use $_REQUEST
+	 * @param   array|string|object|null  $source   Source data; set null to use the default Joomla input source
 	 * @param   array                     $options  Filter options
 	 */
 	public function __construct($source = null, array $options = array())
@@ -26,31 +28,12 @@ class Input extends \JInput
 		{
 			$hash = strtoupper($source);
 
-			switch ($hash)
+			if (!in_array($hash, ['GET', 'POST', 'FILES', 'COOKIE', 'ENV', 'SERVER', 'REQUEST']))
 			{
-				case 'GET':
-					$source = $_GET;
-					break;
-				case 'POST':
-					$source = $_POST;
-					break;
-				case 'FILES':
-					$source = $_FILES;
-					break;
-				case 'COOKIE':
-					$source = $_COOKIE;
-					break;
-				case 'ENV':
-					$source = $_ENV;
-					break;
-				case 'SERVER':
-					$source = $_SERVER;
-					break;
-				default:
-					$source = $_REQUEST;
-					$hash = 'REQUEST';
-					break;
+				$hash = 'REQUEST';
 			}
+
+			$source = $this->extractJoomlaSource($hash);
 		}
 		elseif (is_object($source) && ($source instanceof Input))
 		{
@@ -87,11 +70,12 @@ class Input extends \JInput
 			$source = null;
 		}
 
+		// TODO Joomla 4 -- get the data from the application input
+
 		// If we are not sure use the REQUEST array
 		if (empty($source))
 		{
-			$source = $_REQUEST;
-			$hash = 'REQUEST';
+			$source = $this->extractJoomlaSource('REQUEST');
 		}
 
 		parent::__construct($source, $options);
@@ -213,4 +197,33 @@ class Input extends \JInput
 		return $var;
 	}
 
+	protected function extractJoomlaSource($hash = 'REQUEST')
+	{
+		if (!in_array(strtoupper($hash), ['GET', 'POST', 'FILES', 'COOKIE', 'ENV', 'SERVER', 'REQUEST']))
+		{
+			$hash = 'REQUEST';
+		}
+
+		$hash = strtolower($hash);
+
+		try
+		{
+			$input = Factory::getApplication()->input;
+		}
+		catch (\Exception $e)
+		{
+			$input = new \Joomla\Input\Input();
+		}
+
+		if ($hash !== 'request')
+		{
+			$input = $input->{$hash};
+		}
+
+		$refObject = new \ReflectionObject($input);
+		$refProp = $refObject->getProperty('data');
+		$refProp->setAccessible(true);
+
+		return $refProp->getValue($input);
+	}
 }
