@@ -5,6 +5,7 @@ FOF 3.5.4
 ~ Update the CLI application for Joomla 4 Beta 1
 ~ Apply Joomla version suffixes to all view templates, not just forms
 # [HIGH] DateDecorator fails to call correctly certain DateTime methods, including getTimezone() and diff(), returning invalid results
+# [HIGH] Input in Joomla 4 always returns stale data, ignoring changes made by routing
 # [MEDIUM] Publish / unpublish icon doesn't work under Joomla 4
 # [MEDIUM] Action Log plugins don't work under Joomla 4
 
